--- a/src/main/java/settings/res/parameter.conf
+++ b/src/main/java/settings/res/parameter.conf
@@ -1,5 +1,5 @@
 recorderPath=C:\Users\A171995\Documents
 dynamicFunctions=C:\Users\A171995\Documents\NetBeansProjects\Rewe_DStore_Test_IDE\Rewe_DStore_Test_IDE\src\main\java\recorder\res\functions.conf
 articleConfig=C:\Users\A171995\Documents\NetBeansProjects\Rewe_DStore_Test_IDE\Rewe_DStore_Test_IDE\src\main\java\recorder\res\articles.conf
-projectPath=C:\Develop\preparation_review1\p_t\projekte_test_3\projekte
-globalPath=C:\Develop\preparation_review1\p_t\projekte_test_3\global
+projectPath=E:\Schule\5DHIF\SYP U\testdata\__HTL_Vorbereitung\__NEUE_STRUKTUR__\projekte
+globalPath=E:\Schule\5DHIF\SYP U\testdata\__HTL_Vorbereitung\__NEUE_STRUKTUR__\global
